@@ -8,6 +8,8 @@ PHP                                                                        NEWS
     (Valentin V. Bartenev)
   . Fixed bug #76046 (PHP generates "FE_FREE" opcode on the wrong line).
     (Nikita)
+  . Fixed bug #77291 (magic methods inherited from a trait may be ignored).
+    (cmb)
 
 - CURL:
   . Fixed bug #77264 (curl_getinfo returning microseconds, not seconds).
